--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       <!-- Example of one gallery item: -->
       <div class="col-lg-3 col-md-4">
         <div class="venue-gallery">
-          <a href="img/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
+          <a href="https://i.postimg.cc/Kv10nmhZ/Torres-Medicas.jpg" class="venobox" data-gall="venue-gallery">
             <img src="img/venue-gallery/1.jpg" alt="" class="img-fluid">
           </a>
         </div>
