--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="El futuro esta en tus manos">
+            <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="">
             <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
           </div>
 
