--- a/index.html
+++ b/index.html
@@ -478,6 +478,9 @@
     <!--==========================
   Hotels Section
 ============================-->
+<!--==========================
+  Hotels Section
+============================-->
 <section id="hotels" class="section-with-bg wow fadeInUp">
 
   <div class="container">
@@ -491,9 +494,9 @@
       <div class="col-lg-4 col-md-6">
         <div class="hotel">
           <div class="hotel-img">
-            <img src="ruta/a/imagen/hotel1.jpg" alt="Grand Fiesta Americana Puebla Angelópolis" class="img-fluid">
+            <img src="https://lh5.googleusercontent.com/p/AF1QipO3gTfD1abTcvnLL_IscZDnQV7OEPvmb3hW35Vz=w408-h271-k-no" alt="Grand Fiesta Americana Puebla Angelópolis" class="img-fluid">
           </div>
-          <h3><a href="URL_DEL_HOTEL_1">Grand Fiesta Americana Puebla Angelópolis</a></h3>
+          <h3><a href="https://maps.app.goo.gl/6QDpxmYccVCWeSMA7">Grand Fiesta Americana Puebla Angelópolis</a></h3>
           <div class="stars">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -501,40 +504,33 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
           </div>
-          <p>0.5 km del Hospital Puebla</p>
+          <p>Osa Mayor 2507 Col, Reserva Territorial Atlixcáyotl, Centro Comercial Angelopolis, 72190 Heroica Puebla de Zaragoza, Pue. - 5.3km</p>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-6">
         <div class="hotel">
           <div class="hotel-img">
-            <img src="ruta/a/imagen/hotel2.jpg" alt="Wyndham Puebla Angelopolis" class="img-fluid">
+            <img src="https://lh5.googleusercontent.com/p/AF1QipPO9yUGDIOnzCD3XXjBAypad4MDZLhm92MIqVA=w203-h149-k-no" alt="Hilton Garden Inn Puebla Angelópolis" class="img-fluid">
           </div>
-          <h3><a href="URL_DEL_HOTEL_2">Wyndham Puebla Angelopolis</a></h3>
+          <h3><a href="https://maps.app.goo.gl/eutJv9KDdsd3yxe1A">Hilton Garden Inn Puebla Angelópolis</a></h3>
           <div class="stars">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-half-full"></i>
+            <!-- Agrega las estrellas según la calificación del hotel -->
           </div>
-          <p>0.5 km del Hospital Puebla</p>
+          <p>Atlixcáyotl 2528, Reserva Territorial Atlixcáyotl, Corredor Comercial Desarrollo Atlixcayotl, 72830 San Andrés Cholula, Pue.</p>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-6">
         <div class="hotel">
           <div class="hotel-img">
-            <img src="ruta/a/imagen/hotel3.jpg" alt="La Quinta by Wyndham Puebla Palmas Angelopolis" class="img-fluid">
+            <img src="https://lh5.googleusercontent.com/p/AF1QipM0Asp3UuLMQaOlM83GNUJzG5-pgHTouLm7f_YJ=w86-h114-k-no" alt="One Angelópolis Periferico Puebla" class="img-fluid">
           </div>
-          <h3><a href="URL_DEL_HOTEL_3">La Quinta by Wyndham Puebla Palmas Angelopolis</a></h3>
+          <h3><a href="https://maps.app.goo.gl/Pb4Hbtq5rnAMcJvH6">One Angelópolis Periferico Puebla</a></h3>
           <div class="stars">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
+            <!-- Agrega las estrellas según la calificación del hotel -->
           </div>
-          <p>0.4 km del Hospital Puebla</p>
+          <p>No. 4015, Anillo Perif. Ecológico, San Andres Cholula, 72824 Heroica Puebla de Zaragoza, Pue.</p>
         </div>
       </div>
 
