--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="" style="max-width: 100px; max-height: 100px; margin-right: 10px;">
     </a>
     <div>
-        <span style="font-size: 1.2em; font-weight: bold; color: white;">El futuro está en tus manos</span>
+        <span style="font-size: 1.2em; font-weight: bold; color: white;">.</span>
     </div>
 </div>
 
