--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
     </div>
 </section>
 
-
-   <!--==========================
+<!--==========================
   Schedule Section
 ============================-->
 <section id="schedule" class="section-with-bg">
@@ -195,52 +194,37 @@
       <!-- ... -->
 
       <!-- Schedule Day SÁBADO 20 DE ABRIL -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-4">
-        <!-- Eventos del SÁBADO 20 DE ABRIL -->
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:25 AM</time></div>
-          <div class="col-md-10">
-            <h4>Registro y conexión vía videoconferencia</h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:30 AM</time></div>
-          <div class="col-md-10">
-            <h4>Presentación del Curso <span>Dra. Flor Arriaga</span></h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>10:50 AM</time></div>
-          <div class="col-md-10">
-            <h4>Introducción a la física de la Luz y al conocimiento básico de los equipos láser <span>Marc Cuellar, MSc.</span></h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>12:00 PM</time></div>
-          <div class="col-md-10">
-            <h4>Interacción de la luz y las células <span>Dra. Flor Arriaga</span></h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>01:00 PM</time></div>
-          <div class="col-md-10">
-            <h4>Asignación de material de lectura y preparación para curso</h4>
-          </div>
-        </div>
-      </div>
-      <!-- End Schedule Day SÁBADO 20 DE ABRIL -->
+      <!-- ... (como antes) -->
 
       <!-- Schedule Day VIERNES 26 DE ABRIL -->
       <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
         <!-- Eventos del VIERNES 26 DE ABRIL -->
-        <!-- ... --> <!-- Complete con eventos similares a los del día SÁBADO 20 DE ABRIL -->
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>08:30 AM</time></div>
+          <div class="col-md-10">
+            <h4>Introducción y bienvenida</h4>
+          </div>
+        </div>
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>09:00 AM</time></div>
+          <div class="col-md-10">
+            <h4>El espectro electromagnético y tecnología láser <span>Dr. Pedro Martínez</span></h4>
+          </div>
+        </div>
+        <!-- ... (otros eventos de este día) -->
       </div>
       <!-- End Schedule Day VIERNES 26 DE ABRIL -->
 
       <!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
       <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
         <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
-        <!-- ... --> <!-- Complete con eventos similares a los del día SÁBADO 20 DE ABRIL -->
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>09:00 AM</time></div>
+          <div class="col-md-10">
+            <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
+          </div>
+        </div>
+        <!-- ... (otros eventos de este día) -->
       </div>
       <!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 
@@ -249,6 +233,7 @@
   </div>
 
 </section>
+
 
 
     <!--==========================
