--- a/index.html
+++ b/index.html
@@ -172,11 +172,9 @@
     </div>
 
     <ul class="nav nav-tabs" role="tablist">
-      <!-- Existing Days -->
-      <!-- ... -->
       <!-- Additional Days -->
       <li class="nav-item">
-        <a class="nav-link" href="#day-4" role="tab" data-toggle="tab">SÁBADO 20 DE ABRIL</a>
+        <a class="nav-link active" href="#day-4" role="tab" data-toggle="tab">SÁBADO 20 DE ABRIL</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#day-5" role="tab" data-toggle="tab">VIERNES 26 DE ABRIL</a>
@@ -190,11 +188,41 @@
 
     <div class="tab-content row justify-content-center">
 
-      <!-- Existing Schedule for Days 1-3 -->
-      <!-- ... -->
-
       <!-- Schedule Day SÁBADO 20 DE ABRIL -->
-      <!-- ... (como antes) -->
+      <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
+        <!-- Eventos del SÁBADO 20 DE ABRIL -->
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>09:25 AM</time></div>
+          <div class="col-md-10">
+            <h4>Registro y conexión vía videoconferencia</h4>
+          </div>
+        </div>
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>09:30 AM</time></div>
+          <div class="col-md-10">
+            <h4>Presentación del Curso <span>Dra. Flor Arriaga</span></h4>
+          </div>
+        </div>
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>10:50 AM</time></div>
+          <div class="col-md-10">
+            <h4>Introducción a la física de la Luz y al conocimiento básico de los equipos láser <span>Marc Cuellar, MSc.</span></h4>
+          </div>
+        </div>
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>12:00 PM</time></div>
+          <div class="col-md-10">
+            <h4>Interacción de la luz y las células <span>Dra. Flor Arriaga</span></h4>
+          </div>
+        </div>
+        <div class="row schedule-item">
+          <div class="col-md-2"><time>01:00 PM</time></div>
+          <div class="col-md-10">
+            <h4>Asignación de material de lectura y preparación para curso</h4>
+          </div>
+        </div>
+      </div>
+      <!-- End Schedule Day SÁBADO 20 DE ABRIL -->
 
       <!-- Schedule Day VIERNES 26 DE ABRIL -->
       <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
@@ -208,10 +236,10 @@
         <div class="row schedule-item">
           <div class="col-md-2"><time>09:00 AM</time></div>
           <div class="col-md-10">
-            <h4>El espectro electromagnético y tecnología láser <span>Dr. Pedro Martínez</span></h4>
+            <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
           </div>
         </div>
-        <!-- ... (otros eventos de este día) -->
+        <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
       </div>
       <!-- End Schedule Day VIERNES 26 DE ABRIL -->
 
@@ -224,7 +252,7 @@
             <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
           </div>
         </div>
-        <!-- ... (otros eventos de este día) -->
+        <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
       </div>
       <!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 
@@ -233,8 +261,6 @@
   </div>
 
 </section>
-
-
 
     <!--==========================
       Venue Section
