--- a/index.html
+++ b/index.html
@@ -225,36 +225,88 @@
       <!-- End Schedule Day SÁBADO 20 DE ABRIL -->
 
       <!-- Schedule Day VIERNES 26 DE ABRIL -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
-        <!-- Eventos del VIERNES 26 DE ABRIL -->
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>08:30 AM</time></div>
-          <div class="col-md-10">
-            <h4>Introducción y bienvenida</h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:00 AM</time></div>
-          <div class="col-md-10">
-            <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
-          </div>
-        </div>
-        <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
-      </div>
-      <!-- End Schedule Day VIERNES 26 DE ABRIL -->
-
-      <!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
-        <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:00 AM</time></div>
-          <div class="col-md-10">
-            <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
-          </div>
-        </div>
-        <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
-      </div>
-      <!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
+  <!-- Eventos del VIERNES 26 DE ABRIL -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>08:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Introducción y bienvenida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>Pausa</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:20 AM</time></div>
+    <div class="col-md-10">
+      <h4>Técnicas y procedimientos en distintas especialidades médicas-quirúrgicas y en el ámbito de las Ciencias de la Salud <span>Dra. Pilar Martín</span></h4>
+      <p>Aplicación en dolor crónico, enfermedades crónico-degenerativas, ámbito sanitario, enfermedades virales, infecciones por hongos.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Comida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>02:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>El láser - uso médico-quirúrgico y terapéutico <span>Dra. Pilar Martín</span></h4>
+      <p>Especialidades: Oftalmología, Ginecología, Urología, Medicina Deportiva, Neumología, Oncología, Otorrinolaringología, Ortopedia y Traumatología, entre otras.</p>
+    </div>
+  </div>
+  <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
+</div>
+<!-- End Schedule Day VIERNES 26 DE ABRIL -->
+<!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
+  <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
+      <p>Aplicación en Atenuación de cicatrices, Lifting facial, Rejuvenecimiento vaginal, Tratamiento de hemangiomas, Telangiectasias, Verrugas.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Pausa</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>12:00 PM</time></div>
+    <div class="col-md-10">
+      <h4>Prácticas preclínicas <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <p>Láseres terapéuticos (diodo) 560nm, 658nm, 660nm, 810nm, 940nm, 980nm.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Comida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>02:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Prácticas continuación <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <p>Láser Quirúrgicos (Erbio:YAG (2940nm, 1645nm), Er:Cr/YSGG (2780nm), CO2 (10,000nm).</p>
+    </div>
+  </div>
+  <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
+</div>
+<!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 
     </div>
 
