--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </li>
     </ul>
 
-    <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+    <h3 class="sub-heading">Explore nuestra agenda detallada a continuación para descubrir una serie de sesiones informativas y enriquecedoras diseñadas para ampliar su conocimiento y experiencia.</h3>
 
     <div class="tab-content row justify-content-center">
 
