--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
   <!--==========================
     Intro Section
   ============================-->
-  <section id="intro">
+ <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">La Tecnología Láser<br><span>En</span> La Medicina</h1>
-      <p class="mb-4 pb-0">Curso Teórico Práctico</p>
-      <p class="mb-4 pb-0">Curso 26 y 27 de Abril 2024 en el Auditorio del Hospital MAC Puebla</p>
-      <a href="https://www.youtube.com/watch?v=4-p2zFgfAf0" class="venobox play-btn mb-4" data-vbtype="video"
-        data-autoplay="true"></a>
-      <a href="#about" class="about-btn scrollto">Acerca del evento</a>
+        <h1 class="mb-4 pb-0">Introducción al Láser Médico-Quirúrgico<br><span>Como</span> Disciplina Integral y Multidisciplinaria</h1>
+        <p class="mb-4 pb-0">26 - 27 de Abril 2024, Hospital MAC Puebla</p>
+        <p class="mb-4 pb-0">Puebla, México</p>
+        <p class="mb-4 pb-0">Instructores: Dra. María Pilar Martín Santiago, Dr. Pedro A. Martínez-Carpio</p>
+        <p class="mb-4 pb-0">Organizadores: Dra. Flor Arriaga Lila, Dra. Maribel Sosa Nieves, Marc Cuellar Roehri, MSc.</p>
+        <a href="https://www.youtube.com/watch?v=4-p2zFgfAf0" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+        <a href="#about" class="about-btn scrollto">Acerca del evento</a>
     </div>
-  </section>
+</section>
 
   <main id="main">
 
