--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
   <!--==========================
     Intro Section
   ============================-->
- <section id="intro">
+<section id="intro">
     <div class="intro-container wow fadeIn">
-        <h1 class="mb-4 pb-0">Introducción al Láser Médico-Quirúrgico<br><span>Como</span> Disciplina Integral y Multidisciplinaria</h1>
+        <h1 class="mb-4 pb-0">La Tecnología Láser<br><span>En</span> La Medicina</h1>
+        <p class="mb-4 pb-0">Curso Teórico Práctico</p>
         <p class="mb-4 pb-0">26 - 27 de Abril 2024, Hospital MAC Puebla</p>
         <p class="mb-4 pb-0">Puebla, México</p>
         <p class="mb-4 pb-0">Instructores: Dra. María Pilar Martín Santiago, Dr. Pedro A. Martínez-Carpio</p>
@@ -86,7 +87,6 @@
         <a href="#about" class="about-btn scrollto">Acerca del evento</a>
     </div>
 </section>
-
   <main id="main">
 
     <!--==========================
