--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
   ============================-->
   <header id="header">
     <div class="container">
-
-  <div id="logo" style="display: flex; align-items: center; justify-content: left;">
+  <div id="logo" class="logo-container">
     <a href="#intro" class="scrollto">
-        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="" style="max-width: 100px; max-height: 100px; margin-right: 10px;">
+        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="">
     </a>
     <div>
-        <span style="font-size: 1.2em; font-weight: bold; color: white;">Laser medicinal</span>
+        <span class="logo-text">Laser medicinal</span>
     </div>
 </div>
       <nav id="nav-menu-container">
@@ -103,7 +102,7 @@
           </div>
           <div class="col-lg-3">
             <h3>Cuando</h3>
-            <p>Jueves a Sábado<br>25, 26 y 27 de abril</p>
+            <p>Sesión de preparacion, Viernes & Sábado<br>20, 26 y 27 de abril</p>
           </div>
         </div>
       </div>
