--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="">
     </a>
     <div>
-        <span class="logo-text">Laser medicinal</span>
+        <span class="logo-text">Laser</span>
     </div>
 </div>
       <nav id="nav-menu-container">
