--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!--==========================
       Speakers Section
     ============================-->
-   <section id="speakers" class="wow fadeInUp">
+ <section id="speakers" class="wow fadeInUp">
     <div class="container">
         <div class="section-header">
             <h2>Ponentes invitados</h2>
@@ -119,37 +119,20 @@
         </div>
 
         <div class="row">
-            <!-- Dr. Pedro A. Martínez Carpio -->
+            <!-- Three columns for speakers -->
             <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Dr. Pedro A. Martínez Carpio" class="img-fluid">
-                    <div class="details">
-                        <h3><a href="speaker-details.html">Dr. Pedro A. Martínez Carpio</a></h3>
-                        <p>Director de IMC-Investiláser S.L.U.</p>
-                        <!-- Social Media Icons -->
-                    </div>
-                </div>
+                <!-- Speaker 1 -->
             </div>
-
-            <!-- Dra. Pilar Martín -->
             <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Dra. Pilar Martín" class="img-fluid">
-                    <div class="details">
-                        <h3><a href="speaker-details.html">Dra. Pilar Martín</a></h3>
-                        <p>Especializada en Ortodoncia y Odontología Cosmética</p>
-                        <!-- Social Media Icons -->
-                    </div>
-                </div>
+                <!-- Speaker 2 -->
             </div>
-
-            <!-- Dra. Flor Arriaga -->
             <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Dra. Flor Arriaga" class="img-fluid">
-                    <div class="details">
-                        <h3><a href="speaker-details.html">Dra. Flor Arriaga</a></h3>
-                        <p>Especialista en Estomatología Pediátrica</p>
+                <!-- Speaker 3 -->
+            </div>
+        </div>
+    </div>
+</section>
+                       <p>Especialista en q</p>
                         <!-- Social Media Icons -->
                     </div>
                 </div>
