--- a/index.html
+++ b/index.html
@@ -111,52 +111,114 @@
     <!--==========================
       Speakers Section
     ============================-->
-<section id="speakers" class="wow fadeInUp">
-    <div class="container">
-        <div class="section-header">
-            <h2>Ponentes invitados</h2>
-            <p>Estos seran nuestros Ponentes</p>
-        </div>
-      
-        <div class="row">
-            <!-- Dr. Pedro A. Martínez Carpio -->
-            <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Dr. Pedro A. Martínez Carpio" class="img-fluid">
-                    <div class="details">
-                        <h3><a href="speaker-details.html">Dr. Pedro A. Martínez Carpio</a></h3>
-                        <p>Director de IMC-Investiláser S.L.U.</p>
-                        <!-- Social Media Icons -->
-                    </div>
-                </div>
-            </div>
+#speakers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start; /* Align items at the start of the container */
+  gap: 30px; /* Space between individual speakers */
+  padding: 60px 0 30px 0;
+}
 
-            <!-- Dra. Pilar Martín -->
-            <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Dra. Pilar Martín" class="img-fluid">
-                    <div class="details">
-                        <h3><a href="speaker-details.html">Dra. Pilar Martín</a></h3>
-                        <p>Especializada en Ortodoncia y Odontología Cosmética</p>
-                        <!-- Social Media Icons -->
-                    </div>
-                </div>
-            </div>
+#speakers .speaker {
+  width: 300px; /* Fixed width for uniform size */
+  height: 400px; /* Fixed height for uniform size */
+  position: relative;
+  overflow: hidden;
+}
 
-            <!-- Dra. Flor Arriaga -->
-            <div class="col-lg-4 col-md-6">
-                <div class="speaker">
-                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Dra. Flor Arriaga" class="img-fluid">
-                    <div class="details">
-                        <h3><a href="speaker-details.html">Dra. Flor Arriaga</a></h3>
-                        <!-- Additional details for Dra. Flor Arriaga -->
-                        <!-- Social Media Icons -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+#speakers .speaker img {
+  width: 100%; /* Make the image fill the width of its container */
+  height: 300px; /* Set a fixed height for the images */
+  object-fit: cover; /* Ensure images cover the area, cropping if necessary */
+  display: block; /* Remove any default inline spacing */
+  margin: 0 auto; /* Center the image if it doesn't fill the width */
+}
+
+#speakers .speaker .details {
+  background: rgba(6, 12, 34, 0.76);
+  position: absolute;
+  left: 0;
+  bottom: -100px; /* Adjusted to ensure it's initially outside the view */
+  right: 0;
+  text-align: center;
+  padding-top: 10px;
+  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+#speakers .speaker .details h3 {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+#speakers .speaker .details p {
+  color: #fff;
+  font-size: 15px;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+
+#speakers .speaker .details .social {
+  height: 30px;
+}
+
+#speakers .speaker .details a {
+  color: #fff;
+}
+
+#speakers .speaker .details a:hover {
+  color: #f82249;
+}
+
+#speakers .speaker:hover .details {
+  bottom: 0;
+}
+
+#speakers-details {
+  padding: 60px 0;
+}
+
+#speakers-details .details h2 {
+  color: #112363;
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+#speakers-details .details .social {
+  margin-bottom: 15px;
+}
+
+#speakers-details .details .social a {
+  background: #e9edfb;
+  color: #112363;
+  line-height: 1;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  padding-top: 9px;
+}
+
+#speakers-details .details .social a:hover {
+  background: #f82249;
+  color: #fff;
+}
+
+#speakers-details .details .social a i {
+  font-size: 18px;
+}
+
+#speakers-details .details p {
+  color: #112363;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+
 
 <!--==========================
   Schedule Section
