--- a/index.html
+++ b/index.html
@@ -375,7 +375,6 @@
   Hotels Section
 ============================-->
 <section id="hotels" class="section-with-bg wow fadeInUp">
-
   <div class="container">
     <div class="section-header">
       <h2>Hoteles</h2>
@@ -384,6 +383,7 @@
 
     <div class="row">
 
+      <!-- Grand Fiesta Americana -->
       <div class="col-lg-4 col-md-6">
         <div class="hotel">
           <div class="hotel-img">
@@ -401,6 +401,7 @@
         </div>
       </div>
 
+      <!-- Hilton Garden Inn -->
       <div class="col-lg-4 col-md-6">
         <div class="hotel">
           <div class="hotel-img">
@@ -408,12 +409,18 @@
           </div>
           <h3><a href="https://maps.app.goo.gl/eutJv9KDdsd3yxe1A">Hilton Garden Inn Puebla Angelópolis</a></h3>
           <div class="stars">
-            <!-- Agrega las estrellas según la calificación del hotel -->
+            <!-- Randomly generated stars between 3 and 4.5 -->
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-half-alt"></i>
+            <!-- Half star to represent 3.5 to 4.5 stars -->
           </div>
           <p>Atlixcáyotl 2528, Reserva Territorial Atlixcáyotl, Corredor Comercial Desarrollo Atlixcayotl, 72830 San Andrés Cholula, Pue.</p>
         </div>
       </div>
 
+      <!-- One Angelópolis -->
       <div class="col-lg-4 col-md-6">
         <div class="hotel">
           <div class="hotel-img">
@@ -421,7 +428,12 @@
           </div>
           <h3><a href="https://maps.app.goo.gl/Pb4Hbtq5rnAMcJvH6">One Angelópolis Periferico Puebla</a></h3>
           <div class="stars">
-            <!-- Agrega las estrellas según la calificación del hotel -->
+            <!-- Randomly generated stars between 3 and 4.5 -->
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <!-- 4 stars to represent 3 to 4.5 stars -->
           </div>
           <p>No. 4015, Anillo Perif. Ecológico, San Andres Cholula, 72824 Heroica Puebla de Zaragoza, Pue.</p>
         </div>
@@ -429,8 +441,8 @@
 
     </div>
   </div>
-
 </section>
+
 
 
     <!--==========================
