--- a/index.html
+++ b/index.html
@@ -1,69 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Laser en Medicina</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-
-  <!-- Favicons -->
   <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="icon">
   <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
-
-  <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/venobox/venobox.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-  <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: TheEvent
-    Theme URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
-
 <body>
-
-  <!--==========================
-    Header
-  ============================-->
   <header id="header">
     <div class="container">
-  <div id="logo" class="logo-container">
-    <a href="#intro" class="scrollto">
-        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="">
-    </a>
-    <div>
-        <span class="logo-text">Laser</span>
-    </div>
-</div>
+      <div id="logo" class="pull-left">
+        <a href="#intro" class="scrollto">
+          <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
+        </a>
+        <h1><a href="#intro" class="scrollto">Laser en Medicina</a></h1>
+      </div>
       <nav id="nav-menu-container">
-      <ul class="nav-menu">
-    <li class="menu-active"><a href="#intro">Inicio</a></li>
-    <li><a href="#about">Acerca de</a></li>
-    <li><a href="#speakers">Ponentes</a></li>
-    <li><a href="#schedule">Programa</a></li>
-    <li><a href="#venue">Lugar</a></li>
-    <li><a href="#hotels">Hoteles</a></li>
-    <li><a href="#gallery">Galería</a></li>
-    <li><a href="#supporters">Patrocinadores</a></li>
-    <li><a href="#contact">Contacto</a></li>
-    <li class="buy-tickets"><a href="#buy-tickets">Comprar Entradas</a></li>
-</ul>
-
+        <ul class="nav-menu">
+          <li class="menu-active"><a href="#intro">Inicio</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#speakers">Ponentes</a></li>
+          <li><a href="#schedule">Programa</a></li>
+          <li><a href="#venue">Lugar</a></li>
+          <li><a href="#hotels">Hoteles</a></li>
+          <li><a href="#gallery">Galería</a></li>
+          <li><a href="#supporters">Patrocinadores</a></li>
+          <li><a href="#contact">Contacto</a></li>
+          <li class="buy-tickets"><a href="#buy-tickets">Comprar Entradas</a></li>
+        </ul>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -877,6 +854,8 @@
   <script src="lib/wow/wow.min.js"></script>
   <script src="lib/venobox/venobox.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="contactform/contactform.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
