--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
 </head>
 <body>
   <header id="header">
-    <div class="container">
-      <div id="logo" class="pull-left">
-        <a href="#intro" class="scrollto">
-          <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
-        </a>
-        <h1><a href="#intro" class="scrollto">Laser en Medicina</a></h1>
+    <div class="container d-flex align-items-center justify-content-between">
+      <div id="logo">
+        <a href="#intro"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento"></a>
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
@@ -44,6 +41,7 @@
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
+
 
   <!--==========================
     Intro Section
