--- a/speaker-details.html
+++ b/speaker-details.html
@@ -1,73 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Laser en Medicina</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-
-  <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
+  <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="icon">
+  <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="apple-touch-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
-
-  <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/venobox/venobox.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-  <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: TheEvent
-    Theme URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
-
 <body>
-
-  <!--==========================
-    Header
-  ============================-->
-  <header id="header" class="header-fixed">
-    <div class="container">
-
-       <div id="logo" style="display: flex; align-items: center; justify-content: left;">
-    <a href="#intro" class="scrollto">
-        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="" style="max-width: 100px; max-height: 100px; margin-right: 10px;">
-    </a>
-    <div>
-        <span style="font-size: 1.2em; font-weight: bold; color: white;">El futuro está en tus manos</span>
-    </div>
-</div>
-
+  <header id="header">
+    <div class="container d-flex align-items-center justify-content-between">
+      <div id="logo">
+        <a href="#intro"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento"></a>
+      </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#speakers">Speakers</a></li>
-          <li><a href="index.html#schedule">Schedule</a></li>
-          <li><a href="index.html#venue">Venue</a></li>
-          <li><a href="index.html#hotels">Hotels</a></li>
-          <li><a href="index.html#gallery">Gallery</a></li>
-          <li><a href="index.html#supporters">supporters</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="index.html#buy-tickets">Buy Tickets</a></li>
+          <li class="menu-active"><a href="#intro">Inicio</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#speakers">Ponentes</a></li>
+          <li><a href="#schedule">Programa</a></li>
+          <li><a href="#venue">Lugar</a></li>
+          <li><a href="#hotels">Hoteles</a></li>
+          <li><a href="#gallery">Galería</a></li>
+          <li><a href="#supporters">Patrocinadores</a></li>
+          <li><a href="#contact">Contacto</a></li>
+          <li class="buy-tickets"><a href="#buy-tickets">Comprar Entradas</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
+
 
   <style>
     .speaker-img {
