--- a/speaker-details.html
+++ b/speaker-details.html
@@ -43,187 +43,51 @@
   </header><!-- #header -->
 
 
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>Laser en Medicina</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
+  <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="icon">
+  <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="apple-touch-icon">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/venobox/venobox.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+
   <style>
     .speaker-img {
-        width: 100%; /* Ajusta el ancho al 100% del contenedor padre */
-        height: auto; /* Mantiene la proporción de la imagen */
-        max-width: 400px; /* Establece un ancho máximo para las imágenes */
+        width: auto; /* Ajusta el ancho automáticamente */
+        max-width: 100%; /* Máximo ancho del 100% para ser responsivo */
+        height: auto; /* Altura automática para mantener la proporción */
+        display: block; /* Hace que la imagen sea un bloque */
+        margin: 0 auto; /* Margen automático para centrar */
     }
-</style>
+    .details {
+        text-align: center; /* Centra el texto de los detalles del ponente */
+    }
+  </style>
+</head>
+<body>
+  <header id="header">
+    <!-- Contenido del header aquí -->
+  </header>
 
-<main id="main" class="main-page">
+  <main id="main" class="main-page">
+    <!-- Contenido principal aquí -->
+  </main>
 
-    <!--==========================
-      Speaker Details Section
-    ============================-->
-   <main id="main" class="main-page">
-    <section id="speakers-details" class="wow fadeIn">
-        <div class="container">
-            <div class="section-header">
-                <h2>Detalles del ponente</h2>
-                <p>Perfil y logros del ponente principal.</p>
-            </div>
-
-
-            <!-- Dr. Pedro A. Martínez Carpio -->
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Speaker 1" class="img-fluid speaker-img">
-               </div>
-                <div class="col-md-6">
-                    <div class="details">
-                        <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
-                        <div class="social">
-                            <!-- Social media icons (if any) -->
-                        </div>
-                        <p>Director de IMC-Investiláser S.L.U. desde 2003. Contacto: C/ Sarret, 13, 08205 Sabadell, Barcelona, Tel. 93.727.18.85 / 660.52.72.96, <a href="http://www.investilaser.com">www.investilaser.com</a>, pmc@investilaser.com</p>
-                        <p>El Dr. Martínez Carpio posee una destacada trayectoria en Medicina y Cirugía por la Universidad de Barcelona, especializado en Bioquímica Clínica, Patología Molecular y Medicina Familiar y Comunitaria. Tiene una amplia experiencia en investigación clínica desde 1994, enfocándose en diversas especialidades médicas.</p>
-                        <p>Ha realizado investigaciones significativas, incluyendo trabajos pre-tesis en Farmacología en la Universidad Autónoma de Barcelona y en la Unidad de Ensayos Clínicos del IMIM en Barcelona. Su experiencia incluye Ensayos Clínicos, Metodología y Comunicación de la Investigación Científica.</p>
-                    </div>
-                </div>
-                        </div>
-
-            <!-- Dra. Pilar Martín -->
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Speaker 2" class="img-fluid">
-                </div>
-                <div class="col-md-6">
-                    <div class="details">
-                        <h2>Dra. Pilar Martín (M.D., D.D.S.)</h2>
-                        <div class="social">
-                            <!-- Social media icons (if any) -->
-                        </div>
-                        <p>Estudió Medicina, Cirugía y Odontología en la Universidad de La Laguna (España) y Universidad Odontológica Dominicana. Especializada en Ortodoncia y Odontología Cosmética, con Máster en Implantología, Cirugía, Periodoncia y Prótesis, y en Salud Pública. Máster Universitaria en Kinesiología Médica Odontológica y Posturología Clínica.</p>
-                        <p>En 2010 obtuvo un Máster Europeo en aplicaciones dentales del láser en la Universidad de Barcelona y en 2016 un Máster en Ciencias en Láseres en Odontología en la Universidad de Aquisgrán RWHT. Profesora en la Universidad de Valencia, conferencista internacional con publicaciones y libros sobre Odontología Integrativa.</p>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-<main id="main" class="main-page">
-
-
-            <!-- Última Ponente -->
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Speaker 3" class="img-fluid speaker-img">
-                </div>
-                <div class="col-md-6">
-                    <div class="details">
-                        <h2>Dra. Flor Arriaga</h2>
-                        <div class="social">
-                            <!-- Iconos de redes sociales (si los hay) -->
-                        </div>
-                        <p>Egresada de la BUAP como Cirujano Dentista y Especialista en Estomatología Pediátrica. Desarrolla programas de salud oral en el HNP y realiza rotaciones en el Children’s Hospital en Denver, Colorado. Mastership en Odontología Láser por la Universidad RWTH en Aachen, Alemania y certificada en Estomatología Pediátrica Hospitalaria.</p>
-                        <p>Cuenta con diplomados en diversas áreas dentales y realiza una estadía como Odontopediatra clínico en Honduras. Coordinadora Estatal de Estomatología y Jefe del Servicio de Odontología en el ISSSTE Puebla. Directora General de ARMACU. Ha sido Vicepresidente y Presidente de la AOIEP, miembro de varias asociaciones dentales y profesor invitado en la BUAP.</p>
-                        <p>Ha impartido conferencias internacionales sobre odontología láser y participado en medios de comunicación durante más de 20 años.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-</main>
-
-
-
-
-  <!--==========================
-    Footer
-  ============================-->
   <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
+    <!-- Contenido del footer aquí -->
+  </footer>
 
-          <div class="col-lg-3 col-md-6 footer-info">
-            <img src="img/logo.png" alt="TheEvenet">
-            <p>Derechos resrvados con los abogaos.</p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
-            <p>
-    Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis, <br>
-    72821 San Bernardino Tlaxcalancingo, Pue.
-</p>
-
-              <strong>Phone:</strong> +52 2222393453<br>
-              <strong>Email:</strong> mayerandreas3@gmail.com<br>
-            </p>
-
-            <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- #footer -->
-
-  <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
-
-  <!-- JavaScript Libraries -->
+  <!-- Enlaces a JavaScript al final del cuerpo para una carga de página más rápida -->
   <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="lib/venobox/venobox.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+  <!-- Más enlaces a archivos JS aquí -->
 </body>
-
 </html>
