--- a/speaker-details.html
+++ b/speaker-details.html
@@ -39,21 +39,17 @@
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
-
-  <style>
-    .speaker-img {
-        width: 100%; /* Ajusta el ancho al 100% del contenedor padre */
-        height: auto; /* Mantiene la proporción de la imagen */
-        max-width: 400px; /* Establece un ancho máximo para las imágenes */
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Speaker Details</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+</head>
+<body>
 
 <main id="main" class="main-page">
-
-    <!--==========================
-      Speaker Details Section
-    ============================-->
-   <main id="main" class="main-page">
     <section id="speakers-details" class="wow fadeIn">
         <div class="container">
             <div class="section-header">
@@ -61,69 +57,54 @@
                 <p>Perfil y logros del ponente principal.</p>
             </div>
 
-
             <!-- Dr. Pedro A. Martínez Carpio -->
             <div class="row">
                 <div class="col-md-6">
-                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Speaker 1" class="img-fluid speaker-img">
-               </div>
+                    <img src="https://i.postimg.cc/7hszzJwS/Pedro-A-Mart-nez-Carpio.png" alt="Dr. Pedro A. Martínez Carpio" class="img-fluid speaker-img">
+                </div>
                 <div class="col-md-6">
                     <div class="details">
                         <h2>Dr. Pedro A. Martínez Carpio (M.D., Ph.D.)</h2>
-                        <div class="social">
-                            <!-- Social media icons (if any) -->
-                        </div>
                         <p>Director de IMC-Investiláser S.L.U. desde 2003. Contacto: C/ Sarret, 13, 08205 Sabadell, Barcelona, Tel. 93.727.18.85 / 660.52.72.96, <a href="http://www.investilaser.com">www.investilaser.com</a>, pmc@investilaser.com</p>
                         <p>El Dr. Martínez Carpio posee una destacada trayectoria en Medicina y Cirugía por la Universidad de Barcelona, especializado en Bioquímica Clínica, Patología Molecular y Medicina Familiar y Comunitaria. Tiene una amplia experiencia en investigación clínica desde 1994, enfocándose en diversas especialidades médicas.</p>
                         <p>Ha realizado investigaciones significativas, incluyendo trabajos pre-tesis en Farmacología en la Universidad Autónoma de Barcelona y en la Unidad de Ensayos Clínicos del IMIM en Barcelona. Su experiencia incluye Ensayos Clínicos, Metodología y Comunicación de la Investigación Científica.</p>
                     </div>
                 </div>
-                        </div>
+            </div>
 
             <!-- Dra. Pilar Martín -->
             <div class="row">
                 <div class="col-md-6">
-                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Speaker 2" class="img-fluid">
+                    <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Dra. Pilar Martín" class="img-fluid speaker-img">
                 </div>
                 <div class="col-md-6">
                     <div class="details">
                         <h2>Dra. Pilar Martín (M.D., D.D.S.)</h2>
-                        <div class="social">
-                            <!-- Social media icons (if any) -->
-                        </div>
-                        <p>Estudió Medicina, Cirugía y Odontología en la Universidad de La Laguna (España) y Universidad Odontológica Dominicana. Especializada en Ortodoncia y Odontología Cosmética, con Máster en Implantología, Cirugía, Periodoncia y Prótesis, y en Salud Pública. Máster Universitaria en Kinesiología Médica Odontológica y Posturología Clínica.</p>
+                        <p>Estudió Medicina, Cirugía y Odontología en la Universidad de La Laguna (España) y Universidad Odontológica Dominicana. Especializada en Ortodoncia y Odontología Cosmética, con Máster en Implantología, Cirugía, Periodoncia y Prótesis, y en Salud Pública.</p>
                         <p>En 2010 obtuvo un Máster Europeo en aplicaciones dentales del láser en la Universidad de Barcelona y en 2016 un Máster en Ciencias en Láseres en Odontología en la Universidad de Aquisgrán RWHT. Profesora en la Universidad de Valencia, conferencista internacional con publicaciones y libros sobre Odontología Integrativa.</p>
                     </div>
-
                 </div>
             </div>
-        </div>
-    </section>
-<main id="main" class="main-page">
 
-
-            <!-- Última Ponente -->
+            <!-- Última Ponente: Dra. Flor Arriaga -->
             <div class="row">
                 <div class="col-md-6">
-                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Speaker 3" class="img-fluid speaker-img">
+                    <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Dra. Flor Arriaga" class="img-fluid speaker-img">
                 </div>
                 <div class="col-md-6">
                     <div class="details">
                         <h2>Dra. Flor Arriaga</h2>
-                        <div class="social">
-                            <!-- Iconos de redes sociales (si los hay) -->
-                        </div>
-                        <p>Egresada de la BUAP como Cirujano Dentista y Especialista en Estomatología Pediátrica. Desarrolla programas de salud oral en el HNP y realiza rotaciones en el Children’s Hospital en Denver, Colorado. Mastership en Odontología Láser por la Universidad RWTH en Aachen, Alemania y certificada en Estomatología Pediátrica Hospitalaria.</p>
-                        <p>Cuenta con diplomados en diversas áreas dentales y realiza una estadía como Odontopediatra clínico en Honduras. Coordinadora Estatal de Estomatología y Jefe del Servicio de Odontología en el ISSSTE Puebla. Directora General de ARMACU. Ha sido Vicepresidente y Presidente de la AOIEP, miembro de varias asociaciones dentales y profesor invitado en la BUAP.</p>
-                        <p>Ha impartido conferencias internacionales sobre odontología láser y participado en medios de comunicación durante más de 20 años.</p>
+                        <p>Egresada de la BUAP como Cirujano Dentista y Especialista en Estomatología Pediátrica. Desarrolla programas de salud oral en el HNP y realiza rotaciones en el Children’s Hospital en Denver, Colorado.</p>
+                        <p>Mastership en Odontología Láser por la Universidad RWTH en Aachen, Alemania y certificada en Estomatología Pediátrica Hospitalaria. Cuenta con diplomados en diversas áreas dentales y realiza una estadía como Odontopediatra clínico en Honduras.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 </main>
 
+</body>
+</html>
 
 
 
